fix(radio-toggle): radio toggle is too large on small screens (#1522)

--- a/projects/ng-aquila/src/radio-toggle/radio-toggle-button.component.scss
+++ b/projects/ng-aquila/src/radio-toggle/radio-toggle-button.component.scss
@@ -161,15 +161,6 @@ $bordered-without-right: $border-width 0 $border-width $border-width;
             }
         }
     }
-
-    :host-context(.nx-radio-toggle--small) {
-        .nx-radio-toggle__label-container {
-            @include media-breakpoint-down('small') {
-                @include type-style(toggle-button-large);
-                padding: nx-spacer(xs) - nx-border-size(xs) nx-spacer(2m) - nx-border-size(xs);
-            }
-        }
-    }
 }
 
 .nx-radio-toggle__label-container.nx-radio-toggle__label-container--first {
